--- a/style.css
+++ b/style.css
@@ -14,3 +14,28 @@ h1, h2, h3, h4
     transition:transform 0.5s ease 0.1s;
     z-index:1;
 }
+
+h1 {
+    margin:0;
+    color:#c2dbff;
+    font-size:40px;
+    font-family: 'Raleway', sans-serif;
+    font-weight:600;
+    line-height:1;
+}
+
+h2 {
+    font-family: 'Raleway', sans-serif;
+    font-weight:600;
+    line-height:1;
+}
+
+h3 {
+    margin:0 0 35px 0;
+    color:#418dfc;
+    font-size:30px;
+    font-family: 'Raleway', sans-serif;
+    font-weight:600;
+    line-height:1;
+    text-align:left;
+}
