--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ h1, h2, h3, h4
     width:100%;
     display:flex;
     align-items:center;
-    background-color:#89dece;
+    background-color:#6ba7ff;
     padding:5px;
     box-shadow: 0 1px 8px 0 rgba(66,66,66,.06), 0 2px 14px 0 rgba(66,66,66,.12);
     transform:translateY(-100%);
